a1/brendan_gordon/TEST_PROGRAMS/invalidtype/anderson_santossilva/stringPlusInt.min
# invalid expression of string + int
var s: string;
var i: int;

print s + i;

